--- a/DetailView.xib
+++ b/DetailView.xib
@@ -47,6 +47,7 @@
 						<string key="NSFrame">{{136, 90}, {164, 129}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
